# AoC_2021_C

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: day1_1.h  day2_1.cpp  txt_read_write.cpp  txt_read_write.h
include/day02/: day2_1.cpp  day2_1.h
include/day03/: day03.h
include/utils/: txt_read_write.cpp  txt_read_write.h
includes/: day1-1.cpp  day1-1.hpp  day1_1.cpp  day2_1.cpp  day2_1.h
